# Synthetic-Driver-Distraction-Augmentor

./: README.md
synthetic-driver-distraction-augmentation/: Driver_Augmentation_Colab.ipynb  README.md  main.py  pyproject.toml
synthetic-driver-distraction-augmentation/outputs/: manifest.json
synthetic-driver-distraction-augmentation/pipeline/: __init__.py  generator.py  validator.py
